--- a/Appelpaj.html
+++ b/Appelpaj.html
@@ -1,11 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Äppelpaj</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="appelpaj.css" />
 </head>
+
 <body>
+
+    <header>
+        <h1><a href="bakhemsida.html">Bakhemsida</a></h1>
+    </header>
+    <nav>
+        <div class="dropdown">
+            <ul>
+                <li>
+                    <a href="#">Bakelser</a>
+                    <div class="drop-menu-B">
+                        <ul>
+                            <li><a href="Appelpaj.html">Äppelpaj</a></li>
+                            <li><a href="Havrebollar.html">Havrebollar</a></li>
+                            <li><a href="Kanelbullar.html">Kanelbullar</a></li>
+                            <li><a href="Morotskaka.html">Morotskaka</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">Mat</a>
+                    <div class="drop-menu-M">
+                        <ul>
+                            <li><a href="#">Frukost</a></li>
+                            <li><a href="#">Lunch</a></li>
+                            <li><a href="#">Middag</a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="#footer">Om oss</a></li>
+                <li><a href="#footer">Kontakta oss</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="page-wrapper">
+        <div class="hero"></div>
+    <article id="Äppelpaj">
+        <div class="rubrik">
+            <h1>Äppelpaj</h1>
+        </div>
+        <table>
+            <tr>
+                <td>
+                    <h1>Ingridienser</h1>
+                    <h2>Smuldeg</h2>
+                    <ul>
+                        <li>125 g Smör</li>
+                        <li>3/4 dl Strösocker</li>
+                        <li>1 1/2 dl Havregryn</li>
+                        <li>1 dl Vetemjöl</li>
+                    </ul>
+                    <h2>Fyllning</h2>
+                    <ul>
+                        <li>4 Äpplen</li>
+                        <li>1/2 dl Socker</li>
+                        <li>1 msk Kanel</li>
+                    </ul>
+                </td>
+                <td>
+                    <h2>Gör såhär:</h2>
+                    <ol>
+                        <li>Sätt ugnen på 225 °C.</li>
+                        <li>Blanda mjöl, socker, havregryn och skurna bitar av smöret i en bunke. Rör ihop och knåda till en
+                            deg eller
+                            smulig massa.</li>
+                        <li>Skala (eller behåll skalet på), kärna ur och skär äpplena i tunna klyftor eller bitar.</li>
+                        <li>Blanda äpplen med socker och kanel och lägg i en smord ugnssäker form</li>
+                        <li>Fördela och smula sedan smuldegen över äppelblandningen.</li>
+                        <li>Grädda på 225 grader i mitten av ugnen i 15-20 minuter eller tills pajen är gyllenbrun!</li>
+                        <li>Servera äppelpajen med vaniljsås, vispad grädde eller glass. Mums!</li>
+                    </ol>
+                </td>
+                <td>
+                    <div class="bilder">
+                        <img src="Äpaj1.jpg" alt="Bild på en fin äppelpaj" width="400" height="auto">
+                        <img src="Äpaj3.jpg" alt="Bild på en fin äppelpaj3 " width="400" height="auto">
+                    </div>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <td>
+                    <table width="400">
+                        <tr>
+                            <td>
+                                
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </article>
+
+    </div>
     
+    <footer id="footer">
+        <div class="footer-content">
+            <div class="links box">
+                <h2>Länkar</h2>
+                <div class="content">
+                    <div class="mail">
+                        <span class="text">+46 3-4567 89 01</span>
+                        <div class="mail">
+                            <span class="text">bak@hemsida.com</span>
+                        </div>
+                    </div>
+                    <div class="social">
+                        <ul>
+                            <li><a href="http://www.faceboook.com"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="http://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="http://www.instagram.com"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="http://www.youtube.com"><i class="fa fa-youtube"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="aboutus box">
+                <h2>Bakhemsida</h2>
+                <div class="content">
+                    <p>Bakhemsidan är den perfekta hemsidan för dig som vill finna ett snabbt och enkelt gourmet recept
+                        på dina favorit rätter. Med utbud på bakelser till mat och frukost till lunch!</p>
+                </div>
+            </div>
+            <div class="contact box">
+                <h2>Kontakta oss</h2>
+                <div class="content">
+                    <form action="bakhemsida.html" method="post">
+                        <div class="email">
+                            <div class="text"><input type="email" name="email" class="text-input" placeholder="E-mail"
+                                    required></div>
+                        </div>
+                        <div class="msg">
+                            <div class="text"><textarea rows="2" cols="25" name="message" class="text-input"
+                                    placeholder="Meddelande" required></textarea></div>
+                        </div>
+                        <div class="btn">
+                            <button type="submit">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <center>
+                <span class="credit">Simon Mahari | TE19C</span>
+            </center>
+        </div>
+    </footer>
 </body>
+
 </html>
