Ändrade namnet till index.html

--- a/Appelpaj.html
+++ b/Appelpaj.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1><a href="bakhemsida.html">Bakhemsida</a></h1>
+        <h1><a href="index.html">Bakhemsida</a></h1>
     </header>
     <nav>
         <div class="dropdown">
