--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <header>
-      <h1><a href="index.html">Bakhemsida</a></h1>
+      <h1><a href="bakhemsida.html">Bakhemsida</a></h1>
     </header>
     <nav>
       <div class="dropdown">
